k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lingolou
  namespace: lingolou
spec:
  selector:
    app: lingolou
  ports:
    - port: 80
      targetPort: 8000
